--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 PORT=4000
-MONGO_DB=mongodb+srv://nitingoley42:<password>@cluster0.dxpb7o3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB=mongodb+srv://nitingoley42:uber@cluster0.dxpb7o3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=ahgshsfahdfjafdhfajdfasjafjfajzhfdjhafdhafhs 
 FRONTEND_URL=http://localhost:5173
